[gd_scene load_steps=16 format=2]

[ext_resource path="res://Entities/Weapons/RocketLauncher/RocketLauncher.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Characters/CharacterMover.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Characters/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Entities/Characters/WeaponManager.gd" type="Script" id=4]
[ext_resource path="res://Entities/Weapons/Pistol/Pistol.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Weapons/Shotgun/Shotgun.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Characters/Health.tscn" type="PackedScene" id=7]
[ext_resource path="res://Entities/Characters/Player/WeaponViewport.gd" type="Script" id=8]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.9

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5
mid_height = 0.9

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.156863, 0.8, 0.87451, 1 )

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "move"
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.2, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

void fragment() {
    COLOR = texture(TEXTURE, UV);
    COLOR.a = clamp(COLOR.a, 0.0, 1.0);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )

[node name="Player" type="KinematicBody" groups=[
"player",
]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.9, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.9, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="Camera" type="Camera" parent="Head"]
cull_mask = 1048573

[node name="HeadBobPlayer" type="AnimationPlayer" parent="Head/Camera"]
anims/idle = SubResource( 4 )
anims/move = SubResource( 5 )

[node name="FirePoint" type="Position3D" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.690771 )

[node name="WeaponManager" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.377766, -0.172956, -0.729686 )
script = ExtResource( 4 )
fire_point_path = NodePath("../FirePoint")
sway = 30.0

[node name="Weapons" type="Spatial" parent="Head/Camera/WeaponManager"]

[node name="Pistol" parent="Head/Camera/WeaponManager/Weapons" instance=ExtResource( 5 )]

[node name="Shotgun" parent="Head/Camera/WeaponManager/Weapons" instance=ExtResource( 6 )]

[node name="RocketLauncher" parent="Head/Camera/WeaponManager/Weapons" instance=ExtResource( 1 )]

[node name="HandPos" type="Position3D" parent="Head/Camera/WeaponManager"]

[node name="WeaponViewport" type="ViewportContainer" parent="Head/Camera"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
main_camera_path = NodePath("..")

[node name="Viewport" type="Viewport" parent="Head/Camera/WeaponViewport"]
size = Vector2( 1280, 720 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="Head/Camera/WeaponViewport/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
cull_mask = 2

[node name="CharacterMover" parent="." instance=ExtResource( 2 )]

[node name="Health" parent="." instance=ExtResource( 7 )]

[connection signal="died" from="Health" to="." method="_on_Health_died"]
